--- a/examen/grid.html
+++ b/examen/grid.html
@@ -172,7 +172,7 @@
     <nav>
         <a href="./listas.html">Listas</a>
         <a href="./tablas.html">Tablas</a>
-        <a href="/Formularios.html">Formularios</a>
+        <a href="./Formularios.html">Formularios</a>
         <a href="./flex.html">Flex y Position</a>
         <a href="./grid.html">Grid</a>
     </nav>
